fixtures/cs-hash-01/bad/md5-package-import.js
import md5 from "md5";

export function hashPassword(password) {
	return md5(password);
}
